syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "auth/pb";

message RegisterUserRequest {
    string name = 1;
    string surname = 2;
    string username = 3;
    string password = 4;
    string email = 5;
}

message RegisterUserResponse {
    string registration_status = 1;
}

service Auth {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
}